--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -21,4 +21,5 @@ jobs:
           key: cache-85700f9
 
       - name: prime-cache-85700f9
-        run: echo "Cache hit status: ${{ steps.cache-step.outputs.cache-hit }}"
+        run: |
+          echo "Cache hit status: ${{ steps.cache-step.outputs.cache-hit }}"
