--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,4 +1,4 @@
-name: CI with Cache
+name: Minimal Cache Test
 
 on:
   push:
@@ -10,31 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # 1️⃣ Checkout repository
+      - uses: actions/checkout@v4
 
-      # 2️⃣ Install dependencies first
-      - name: Install dependencies
-        run: npm install
+      # 2️⃣ Create a dummy folder to cache
+      - run: mkdir -p cache-folder && echo "Hello cache!" > cache-folder/file.txt
 
-      # 3️⃣ Cache node_modules
-      - name: Cache dependencies
+      # 3️⃣ Cache the folder and prime the cache
+      - uses: actions/cache@v4
         id: cache
-        uses: actions/cache@v4
         with:
-          path: node_modules       # folder to cache
-          key: cache-85700f9      # cache key
+          path: cache-folder
+          key: cache-85700f9
 
-      # 4️⃣ Prime cache step to echo hit/miss
-      - name: prime-cache-85700f9
-        run: |
-          if [ "${{ steps.cache.outputs.cache-hit }}" == "true" ]; then
-            echo "Cache hit!"
-          else
-            echo "Cache miss!"
-          fi
-
-      # 5️⃣ Run your build/test (optional)
-      - name: Run build
-        run: npm run build
+      # 4️⃣ Echo cache hit/miss
+      - run: |
+          echo "Cache hit status: ${{ steps.cache.outputs.cache-hit }}"
